fix: Spacing corrections

--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -625,7 +625,8 @@ body .change-theme {
         display: flex;
         flex-direction: column;
         gap: 24px;
-        margin: 24px 0;
+        margin-top: 24px;
+        padding-bottom: 24px;
         color: var(--foreground-sidebars);
         background-color: var(--sidebars);
     }
